--- a/app/main.ejs
+++ b/app/main.ejs
@@ -17,11 +17,19 @@
         <div id="topBar" class="hidden">
             <div id="progress-bar"></div>
         </div>
-        <div id="main">
-        </div>
-        <div id="mainBar">
-            <input type="text" placeholder="Ник" id="nick">
-            <button id="playButton">Играть</button>
+        <div class="main-content">
+            <div class="top">
+                <img src="https://picsum.photos/1280/720" style="width: 100%;">
+                <div class="top-overlay">
+                    <div class="top-toolbar">
+                        <div style="width: 100%;">
+                            <h2>Some Game</h2>
+                            <h5>Description of the game lol kek cheburek</h5>
+                        </div>
+                        <button id="playButton">Играть</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
