--- a/app/main.ejs
+++ b/app/main.ejs
@@ -19,7 +19,7 @@
         </div>
         <div class="main-content">
             <div class="top">
-                <img src="https://picsum.photos/1280/720" style="width: 100%;">
+                <img src="https://picsum.photos/1280/720" onerror="this.src='../app/assets/images/default.png'">
                 <div class="top-overlay">
                     <div class="top-toolbar">
                         <div style="width: 100%;">
