--- a/app/app.ejs
+++ b/app/app.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TJMC-Launcher</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
 </head>
 <body>
