--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -773,7 +773,7 @@ input:checked + .toggleSwitchSlider:before {
     display: flex;
     height: 100%;
     min-width: 240px;
-    max-width: 25vw;
+    max-width: 250px;
     flex: 1 0 240px;
     flex-direction: column;
     flex-shrink: 0;
@@ -840,20 +840,23 @@ input:checked + .toggleSwitchSlider:before {
 
 #main > .main-content {
     position: relative;
-    padding: 10px;
+    /*padding: 10px;*/
     height: 100%;
     width: 100%;
+    overflow: hidden overlay;
 }
 
 #main > .main-content > .top {
     width: 100%;
-    max-height: 50vh;
+    height: 100%;
     position: relative;
     overflow: hidden;
 }
-#main > .main-content > .top > img {
+#main > .main-content > .top > img{
+    position: absolute;
     width: 100%;
-    min-height: 240px;
+    height: 100%;
+    object-fit: cover;
 }
 #main > .main-content > .top > .top-overlay {
     width: 100%;
@@ -861,20 +864,21 @@ input:checked + .toggleSwitchSlider:before {
     position: absolute;
     overflow: hidden;
     bottom: 0;
-    background: linear-gradient(180deg,transparent,rgba(10,10,10,0.8));
+    background: linear-gradient(180deg,transparent 70%,rgba(10,10,10,0.8));
 }
 
 #main > .main-content > .top > .top-overlay > .top-toolbar {
-    width: 100%;
-    height: 5em;
     position: absolute;
     bottom: 0;
+    right: 0;
+    left: 0;
     padding: 10px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
     box-sizing: border-box;
-    backdrop-filter: saturate(180%) blur(15px);
+    /*backdrop-filter: saturate(180%) blur(15px);*/
+    overflow: hidden;
 }
 #main > .main-content > .top h2 {
     font-size: 25px;
@@ -894,4 +898,9 @@ input:checked + .toggleSwitchSlider:before {
 }
 #playButton:active {
     background-color: #008000 !important;
+}
+
+#main > .main-content > .main {
+    position: relative;
+    padding: 10px;
 }
