converted node ui modules to plain js

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -33,6 +33,9 @@
         <div style="position: fixed; opacity: 0; pointer-events: none;"></div>
     </div>
     <script src="./assets/js/libs/Animation.js"></script>
+    <script src="./assets/js/uibind.js"></script>
+    <script src="./assets/js/message.js"></script>
+    <script src="./assets/js/settings.js"></script>
     <script src="./assets/js/scripts/renderer.js"></script>
 </body>
 </html>
