some config manager + renderer fixes

--- a/app/main.ejs
+++ b/app/main.ejs
@@ -34,8 +34,8 @@
                 <div class="top-overlay">
                     <div class="top-toolbar">
                         <div style="width: 100%;">
-                            <h2>Some Game</h2>
-                            <h5>Description of the game lol kek cheburek</h5>
+                            <h2>Федя лох</h2>
+                            <h5>Просто конченый полупидор</h5>
                         </div>
                         <button id="playButton">Играть</button>
                     </div>
