auth render added

--- a/app/main.ejs
+++ b/app/main.ejs
@@ -12,8 +12,8 @@
                     <img src="https://my.tjmcraft.ga/resources/server/skinRender.php?i=1556612610&headOnly=true&ratio=10&user=MakAndJo&vr=0&hr=0">
                 </div>
                 <div class="nameTag">
-                    <div class="title">MakAndJo</div>
-                    <div class="subtitle">Status</div>
+                    <div class="title">Nvclon</div>
+                    <div class="subtitle">Admin</div>
                 </div>
                 <button href="#" id="add-version-button" class="button">
                     <svg x="0" y="0" class="privateChannelRecipientsInviteButtonIcon-3A3uTc icon-22AiRD" aria-hidden="false" width="24" height="24" viewBox="0 0 18 18"><polygon fill-rule="nonzero" fill="currentColor" points="15 10 10 10 10 15 8 15 8 10 3 10 3 8 8 8 8 3 10 3 10 8 15 8"></polygon></svg>
