--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -1,4 +1,4 @@
-<div class="sidebarView">
+<div class="sidebarView" id="user-settings">
     <div class="sidebar-region">
         <div class="sidebar">
             <div class="item header">Настройки пользователя</div>
