--- a/app/versions.ejs
+++ b/app/versions.ejs
@@ -1,6 +1,6 @@
 <div class="container" id="version-selector">
     <div class="sidebar-main" id="version-list">
-        <div class="container-f">
+        <div class="container-f" id="dropdown-list">
             <div class="header">
                 <h1>Версии</h1>
                 <svg width="18" height="18" class="button-1w5pas"><g fill="none" fill-rule="evenodd"><path d="M0 0h18v18H0"></path><path stroke="currentColor" d="M4.5 4.5l9 9" stroke-linecap="round"></path><path stroke="currentColor" d="M13.5 4.5l-9 9" stroke-linecap="round"></path></g></svg>
@@ -11,7 +11,13 @@
             </div>
         </div>
         <div class="sidebar-region">
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <div class="item navItem bgL"></div>
+                <div class="item navItem bgL"></div>
+                <div class="item navItem bgL"></div>
+                <div class="item navItem bgL"></div>
+                <div class="item navItem bgL"></div>
+            </div>
         </div>
     </div>
     <div id="main" class="base">
