--- a/app/versions.ejs
+++ b/app/versions.ejs
@@ -17,6 +17,7 @@
                 <div class="item navItem bgL"></div>
                 <div class="item navItem bgL"></div>
                 <div class="item navItem bgL"></div>
+                <div class="item navItem bgL"></div>
             </div>
         </div>
     </div>
