--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -572,7 +572,6 @@ svg[data-icon="success-circle"] {
     overflow: hidden;
     flex-shrink: 0;
     font-weight: 500;
-    min-height: 28px;
 }
 
 .navItem {
@@ -584,6 +583,8 @@ svg[data-icon="success-circle"] {
     line-height: 20px;
     cursor: pointer;
     color: #b9bbbe;
+    min-height: 28px;
+    margin-bottom: 2px;
 }
 
 .navItem:hover {
