added Layer core + some css fixes

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -36,6 +36,7 @@
     <script src="./assets/js/scripts/Animation.js"></script>
     <script src="./assets/js/scripts/AlertEx.js"></script>
     <script src="./assets/js/scripts/uibind.js"></script>
+    <script src="./assets/js/scripts/Layer.js"></script>
     <script src="./assets/js/settings.js"></script>
     <script src="./assets/js/versionChooser.js"></script>
     <script src="./assets/js/scripts/renderer.js"></script>
