--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1022,6 +1022,7 @@ input:checked + .toggleSwitchSlider:before {
     transition: background-color .1s linear;
     text-transform: none !important;
     font-size: 16px !important;
+    user-select: none;
 }
 .container-f .header h1 {
     font-size: 16px;
@@ -1030,6 +1031,7 @@ input:checked + .toggleSwitchSlider:before {
     text-overflow: ellipsis;
     overflow: hidden;
     flex: 1;
+    user-select: none;
 }
 .container-f .header:hover {
     background-color: #4f545c29;
@@ -1057,6 +1059,7 @@ input:checked + .toggleSwitchSlider:before {
     text-decoration: none;
     display: block;
     border-radius: 5px;
+    user-select: none;
 }
 .container-f .dropdown a:hover {
     background-color: #1aaa1a;
@@ -1097,5 +1100,7 @@ input:checked + .toggleSwitchSlider:before {
     animation-timing-function: linear;
     background: linear-gradient(to right, var(--background-primary) 8%, #dddddd 18%, var(--background-primary) 33%);
     background-size: 200% 1px;
+    cursor: pointer;
+    user-select: none;
     margin: 5px 0;
 }
