--- a/app/app.ejs
+++ b/app/app.ejs
@@ -37,8 +37,7 @@
     <script src="./assets/js/scripts/AlertEx.js"></script>
     <script src="./assets/js/scripts/uibind.js"></script>
     <script src="./assets/js/scripts/Layer.js"></script>
-    <script src="assets/js/ui/popup-element.js"></script>
-    <script src="assets/js/scripts/Popup.js"></script>
+    <script src="./assets/js/ui/popup-element.js"></script>
     <script src="./assets/js/settings.js"></script>
     <script src="./assets/js/versionChooser.js"></script>
     <script src="./assets/js/scripts/renderer.js"></script>
