--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1118,9 +1118,13 @@ input:checked + .toggleSwitchSlider:before {
     display: block;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     border-radius: 5px;
+    pointer-events: none;
+    transition: .1s opacity;
+}
+
+.tooltip .content {
     font-size: 14px;
     line-height: 16px;
-    transition: .1s opacity;
 }
 
 .tooltip .pointer {
