--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -24,21 +24,28 @@
                     <h2>Конфигурация скина</h2>
                 </div>
                 <div id="minecraft-settings" class="tab hidden">
-                    <div class="field">
-                        <h2>Настройки Minecraft</h2>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet diam vel nunc aliquet molestie. Nullam tincidunt sapien lacus, eget mattis lorem volutpat a. Aliquam blandit vehicula ultricies. Proin eget diam vitae elit fermentum laoreet quis sed justo. Donec eget mi bibendum, cursus lectus in, molestie est. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed aliquet mauris ut enim cursus, ut hendrerit turpis semper. Pellentesque tempor est lacus. Donec accumsan est a sem scelerisque, quis mattis ex ornare. Sed vitae erat eget augue dictum molestie a sit amet metus. Donec et ex nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque vehicula sit amet tortor non volutpat. Cras euismod tincidunt eros, nec porttitor metus fringilla vitae. In sodales mauris massa, quis faucibus est mollis ut.
-                    </div>
-                    <div class="separator"></div>
-                    <div class="field">
-                        <div class="FieldContainer">
-                            <div class="Field Left">
-                                <span>Some Text</span>
-                            </div>
-                            <div class="Field Right">
-                                <label class="toggleSwitch">
-                                    <input type="checkbox" cValue="Fullscreen">
-                                    <span class="toggleSwitchSlider"></span>
-                                </label>
+                    <h2>Настройки Minecraft</h2>
+                    <div class="children">
+                        <div class="container-cc3V">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet diam vel nunc aliquet molestie. Nullam tincidunt sapien lacus, eget mattis lorem volutpat a. Aliquam blandit vehicula ultricies. Proin eget diam vitae elit fermentum laoreet quis sed justo. Donec eget mi bibendum, cursus lectus in, molestie est. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed aliquet mauris ut enim cursus, ut hendrerit turpis semper. Pellentesque tempor est lacus. Donec accumsan est a sem scelerisque, quis mattis ex ornare. Sed vitae erat eget augue dictum molestie a sit amet metus. Donec et ex nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque vehicula sit amet tortor non volutpat. Cras euismod tincidunt eros, nec porttitor metus fringilla vitae. In sodales mauris massa, quis faucibus est mollis ut.
+                        </div>
+                        <div class="separator"></div>
+                        <div class="container-cc3V">
+                            <h5>Label for container</h5>
+                            <div class="container-icf3v">
+                                <div class="labelRow">
+                                    <label for="uid_1">Some text source</label>
+                                    <div class="control">
+                                        <label class="toggleSwitch">
+                                            <input type="checkbox" cValue="Fullscreen" id="uid_1">
+                                            <span class="toggleSwitchSlider"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="note">
+                                    <div>description</div>
+                                </div>
+                                <div class="divider separator"></div>
                             </div>
                         </div>
                     </div>
@@ -51,7 +58,13 @@
                 </div>
                 <div id="about-tab" class="tab hidden">
                     <h2>О нас</h2>
-                    <h5>Просмотр информации о текущем релизе и заметки к выпуску</h5>
+                    <div class="children">
+                        <div class="container-cc3V">
+                            <h5>Просмотр информации о текущем релизе и заметки к выпуску</h5>
+                            <div class="note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet diam vel nunc aliquet molestie. Nullam tincidunt sapien lacus, eget mattis lorem volutpat a. Aliquam blandit vehicula ultricies. Proin eget diam vitae elit fermentum laoreet quis sed justo. Donec eget mi bibendum, cursus lectus in, molestie est. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed aliquet mauris ut enim cursus, ut hendrerit turpis semper. Pellentesque tempor est lacus. Donec accumsan est a sem scelerisque, quis mattis ex ornare. Sed vitae erat eget augue dictum molestie a sit amet metus. Donec et ex nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque vehicula sit amet tortor non volutpat. Cras euismod tincidunt eros, nec porttitor metus fringilla vitae. In sodales mauris massa, quis faucibus est mollis ut.</div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
