--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -31,10 +31,10 @@
                         </div>
                         <div class="separator"></div>
                         <div class="container-cc3V">
-                            <h5>Label for container</h5>
+                            <h5>Как мы используем ваши данные</h5>
                             <div class="container-icf3v">
                                 <div class="labelRow">
-                                    <label for="uid_1">Some text source</label>
+                                    <label for="uid_1" class="title-3uvn">Использование данных для улучшения TJMC</label>
                                     <div class="control">
                                         <label class="toggleSwitch">
                                             <input type="checkbox" cValue="Fullscreen" id="uid_1">
@@ -43,7 +43,22 @@
                                     </div>
                                 </div>
                                 <div class="note">
-                                    <div>description</div>
+                                    <div>Эта настройка позволяет нам в аналитических целях использовать и обрабатывать информацию о том, как вы перемещаетесь по TJMC и используете его. Это позволяет, к примеру, давать вам доступ к тестированию новых функций.</div>
+                                </div>
+                                <div class="divider separator"></div>
+                            </div>
+                            <div class="container-icf3v">
+                                <div class="labelRow">
+                                    <label for="uid_2" class="title-3uvn">Использование данных для персонализации опыта использования TJMC</label>
+                                    <div class="control">
+                                        <label class="toggleSwitch">
+                                            <input type="checkbox" cValue="Fullscreen" id="uid_2">
+                                            <span class="toggleSwitchSlider"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="note">
+                                    <div>Этот параметр позволяет нам использовать информацию (например, о том, с кем вы общаетесь или во что играете), чтобы настроить TJMC лично для вас. <a class="anchor" href="#">Подробнее</a></div>
                                 </div>
                                 <div class="divider separator"></div>
                             </div>
