settings note fix

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -43,7 +43,7 @@
                                     </div>
                                 </div>
                                 <div class="note">
-                                    <div>Эта настройка позволяет нам в аналитических целях использовать и обрабатывать информацию о том, как вы перемещаетесь по TJMC и используете его. Это позволяет, к примеру, давать вам доступ к тестированию новых функций.</div>
+                                    Эта настройка позволяет нам в аналитических целях использовать и обрабатывать информацию о том, как вы перемещаетесь по TJMC и используете его. Это позволяет, к примеру, давать вам доступ к тестированию новых функций.
                                 </div>
                                 <div class="divider separator"></div>
                             </div>
@@ -58,7 +58,7 @@
                                     </div>
                                 </div>
                                 <div class="note">
-                                    <div>Этот параметр позволяет нам использовать информацию (например, о том, с кем вы общаетесь или во что играете), чтобы настроить TJMC лично для вас. <a class="anchor" href="#">Подробнее</a></div>
+                                    Этот параметр позволяет нам использовать информацию (например, о том, с кем вы общаетесь или во что играете), чтобы настроить TJMC лично для вас. <a class="anchor" href="#">Подробнее</a>
                                 </div>
                                 <div class="divider separator"></div>
                             </div>
